Agregando css de id carrusel

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             window.onload = function () {
                 // Variables
                 const IMAGENES = [
-                    '/img/dibujo.svg',
-                    '/img/dibujo3.svg',
-                    '/img/dibujo2.svg'
+                    'img/dibujo.svg',
+                    'img/dibujo3.svg',
+                    'img/dibujo2.svg'
                 ];
                
                 let posicionActual = 1;
